feat(api-query): 멤버의 뱃지 조회시 뱃지의 모든 정보를 넣어서 반환